--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -11,7 +11,7 @@ jobs:
     name: Web Export
     runs-on: ubuntu-20.04
     container:
-      image: barichello/godot-ci:3.4.2
+      image: barichello/godot-ci:latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
