--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -1,45 +1,44 @@
-name: "godot-ci"
+name: "godot-ci export"
 on: push
-# https://github.com/godotengine/godot/releases/download/4.1.1-stable/Godot_v4.1.1-stable_export_templates.tpz
-# /github/home/.local/share/godot/export_templates/4.1.1.stable/web_release.zip
-# https://github.com/godotengine/godot/releases/download/4.1.1-stable/Godot_v4.1.1-stable_web_editor.zip
+
 env:
   GODOT_VERSION: 4.1.2
-  EXPORT_NAME: LassoKnight
-  
+
 jobs:
   export-web:
     name: Web Export
-    runs-on: ubuntu-latest
-    #container:
-    #  image: barichello/godot-ci:4.1.1
+    runs-on: ubuntu-20.04
+    container:
+      image: barichello/godot-ci:${GODOT_VERSION}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
           lfs: true
-      - name: Setup
-        run: | # Download Godot Binary
-          wget https://github.com/godotengine/godot/releases/download/${GODOT_VERSION}-stable/Godot_v${GODOT_VERSION}-stable_linux.x86_64.zip
-          unzip Godot_v${GODOT_VERSION}-stable_linux.x86_64.zip
 
-          mkdir -v -p ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable
-          wget https://github.com/godotengine/godot/releases/download/${GODOT_VERSION}-stable/Godot_v${GODOT_VERSION}-stable_web_editor.zip -O ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable/web_release.zip
+      - name: Setup
+        run: |
+          mkdir -v -p ~/.local/share/godot/export_templates
+          mv /root/.local/share/godot/templates/${GODOT_VERSION}.stable ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable
       - name: Web Build
         run: |
           mkdir -v -p build/web
-          ./Godot_v${GODOT_VERSION}-stable_linux.x86_64 -v --headless --export-release "Web" ../build/web/index.html
+          godot -v --headless --export-release "Web" build/web/index.html
+      - name: Install rsync 📚
+        run: |
+          apt-get update && apt-get install -y rsync curl
+      - name: Patch for Cross Origin Isolation and SharedArrayBuffer
+        run: |
+          cd build/web/
+          curl https://raw.githubusercontent.com/josephrocca/clip-image-sorter/92b108dc670d0b56bd6b72963b0e86c4c862412e/enable-threads.js --output enable-threads.js
+          sed -i 's|headers.set("Cross-Origin-Embedder-Policy", "credentialless")|headers.set("Cross-Origin-Embedder-Policy", "require-corp")|g'  enable-threads.js
+          sed -i 's|<script src="index.js"></script>|<script src="enable-threads.js"></script><script src="index.js"></script>|g' index.html
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
           name: web
           path: build/web
-      - name: Install rsync 📚
-        run: |
-          apt-get update && apt-get install -y rsync
       - name: Deploy to GitHub Pages 🚀
-        uses: JamesIves/github-pages-deploy-action@releases/v4
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          branch: gh-pages # The branch the action should deploy to.
           folder: build/web # The folder the action should deploy.
