Maybe fixed web release for wasm GDExtension???

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -4,11 +4,11 @@ name="Web"
 platform="Web"
 runnable=true
 dedicated_server=false
-custom_features=""
+custom_features="wasm32, web"
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="C:/Users/astr0/Desktop/LassoKnight.html"
+export_path="C:/Users/astr0/Desktop/export/LassoKnight.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -16,9 +16,9 @@ encrypt_directory=false
 
 [preset.0.options]
 
-custom_template/debug=""
-custom_template/release=""
-variant/extensions_support=false
+custom_template/debug="C:/Program Files (x86)/Steam/steamapps/common/Godot Engine/editor_data/export_templates/4.2.1.stable/web_dlink_debug.zip"
+custom_template/release="C:/Program Files (x86)/Steam/steamapps/common/Godot Engine/editor_data/export_templates/4.2.1.stable/web_dlink_release.zip"
+variant/extensions_support=true
 vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=false
 html/export_icon=true
