--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -17,7 +17,7 @@ encrypt_directory=false
 [preset.0.options]
 
 custom_template/debug="C:/Program Files (x86)/Steam/steamapps/common/Godot Engine/editor_data/export_templates/4.2.1.stable/web_dlink_debug.zip"
-custom_template/release="C:/Program Files (x86)/Steam/steamapps/common/Godot Engine/editor_data/export_templates/4.2.1.stable/web_dlink_release.zip"
+custom_template/release="/github/home/.local/share/godot/export_templates/4.2.1.stable/web_dlink_release.zip"
 variant/extensions_support=true
 vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=false
