--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -4,7 +4,7 @@ name="Web"
 platform="Web"
 runnable=true
 dedicated_server=false
-custom_features="wasm32, web"
+custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
@@ -16,9 +16,9 @@ encrypt_directory=false
 
 [preset.0.options]
 
-custom_template/debug="C:/Program Files (x86)/Steam/steamapps/common/Godot Engine/editor_data/export_templates/4.2.1.stable/web_dlink_debug.zip"
-custom_template/release="/github/home/.local/share/godot/export_templates/4.2.1.stable/web_dlink_release.zip"
-variant/extensions_support=true
+custom_template/debug=""
+custom_template/release=""
+variant/extensions_support=false
 vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=false
 html/export_icon=true
